[tool.poetry]
name = "relational-attention"
version = "0.1.0"
description = "Pytorch implementation of the relational attention paper"
authors = ["Adrien Bufort"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "relational_attention"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
